--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,11 @@
 
 
 %.o: %.cpp
-	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
+	g++ -c -I $(HOME)/include/ -std=c++17 $^
+#	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
 #	g++ -DNDEBUG -c -I $(HOME)/include/ -std=c++17 $^
 
-manifem-exe-%: iterator.o field.o function.o global.o manifold.o mesh.o main-%.o progressive.o
+manifem-exe-%: iterator.o field.o finite-elem.o function.o global.o manifold.o mesh.o main-%.o progressive.o
 	g++ -o $@ -std=c++17 $^
 
 manifem-exe-9.15: main-9.15.o
@@ -16,7 +17,7 @@ run-%: manifem-exe-%
 run-test: test
 	./$<
 
-test: test.o function.o mesh.o field.o iterator.o manifold.o
+test: test.o finite-elem.o function.o mesh.o field.o iterator.o manifold.o
 	g++ -o $@ -std=c++17 $^
 
 clean:
