--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 
 
 %.o: %.cpp
-	g++ -c -I $(HOME)/include/ -std=c++17 $^
-#	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
-#	g++ -DNDEBUG -c -I $(HOME)/include/ -std=c++17 $^
+#	g++ -c -I $(HOME)/include/ -std=c++17 $^
+	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
+#	g++ -DNDEBUG -c -O4 -I $(HOME)/include/ -std=c++17 $^
 
 manifem-exe-%: iterator.o field.o finite-elem.o function.o global.o manifold.o mesh.o main-%.o progressive.o
 	g++ -o $@ -std=c++17 $^
