--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,9 @@
 %.o: %.cpp
 #	g++ -c -I $(HOME)/include/ -std=c++17 $^
 	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
-#	g++ -DNDEBUG -c -O4 -I $(HOME)/include/ -std=c++17 $^
+#	g++ -DNDEBUG -c -I $(HOME)/include/ -std=c++17 $^
 
-manifem-exe-%: iterator.o field.o finite-elem.o function.o global.o manifold.o mesh.o main-%.o progressive.o
+manifem-exe-%: field.o finite-elem.o function.o global.o iterator.o manifold.o mesh.o main-%.o progressive.o
 	g++ -o $@ -std=c++17 $^
 
 manifem-exe-9.15: main-9.15.o
@@ -14,10 +14,10 @@ manifem-exe-9.15: main-9.15.o
 run-%: manifem-exe-%
 	./$<
 
-run-test: test
+run-test: manifem-exe-test
 	./$<
 
-test: test.o finite-elem.o function.o mesh.o field.o iterator.o manifold.o
+manifem-exe-test: test.o finite-elem.o function.o mesh.o field.o global.o iterator.o manifold.o mesh.o progressive.o
 	g++ -o $@ -std=c++17 $^
 
 clean:
@@ -28,5 +28,5 @@ clean-all: clean
 
 .SECONDARY:
 
-.PHONY: clean clean-all
+.PHONY: clean clean-all run-test run-%
 
