--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 
 
 %.o: %.cpp
-#	g++ -c -I $(HOME)/include/ -std=c++17 $^
-	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
+	g++ -c -I $(HOME)/include/ -std=c++17 $^
+#	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
 #	g++ -DNDEBUG -c -I $(HOME)/include/ -std=c++17 $^
 
 manifem-exe-%: field.o finite-elem.o function.o global.o iterator.o manifold.o mesh.o main-%.o progressive.o
