--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@
 %.o: %.cpp
 #	g++ -c -I $(HOME)/include/ -std=c++17 $^
 	g++ -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
+#	g++ -DMANIFEM_COLLECT_CM -Wshadow -Wall -c -I $(HOME)/include/ -std=c++17 $^
 #	g++ -DNDEBUG -c -O4 -I $(HOME)/include/ -std=c++17 $^
 
 manifem-exe-%: iterator.o field.o finite-elem.o function.o global.o manifold.o mesh.o main-%.o progressive.o
